# AndroidGotHook

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xhy/androidgothook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/xhy/androidgothook/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
inject/: build.gradle
inject/src/main/: AndroidManifest.xml
inject/src/main/cpp/: CMakeLists.txt  elfutil.cpp  elfutil.h  gotutil.cpp  gotutil.h  inject.cpp  mylog.h
inject/src/main/cpp/include/: elf32.h  elfcommon.h  gotutil.h
victim/: build.gradle
victim/src/main/: AndroidManifest.xml
victim/src/main/cpp/: CMakeLists.txt  victim.c  victim.cpp
victim_app/: build.gradle
victim_app/nativelib/: build.gradle
victim_app/nativelib/src/main/: AndroidManifest.xml
victim_app/nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
victim_app/src/main/: AndroidManifest.xml
victim_app/src/main/res/layout/: activity_main.xml
victim_app/src/main/res/values/: strings.xml
workdir/: 0-patch-victim.bat  1-clean-victim-patch.bat  2-run-victim-patch.bat  edit-victim.py
workdir/arm/: 0-patch-victim-arm.bat  1-clean-victim-patch-arm.bat  2-run-victim-patch-arm.bat
workdir/arm64/: 0-patch-victim-arm64.bat  1-clean-victim-patch-arm64.bat  1-run-victim-patch-arm64.bat
(+2 files in other folders)
